[gd_scene load_steps=3 format=2]

[ext_resource path="res://shaker.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 57.0
margin_right = 720.0
margin_bottom = 1337.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 541.0
margin_top = 510.0
margin_right = 688.0
margin_bottom = 748.0
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 17.0
margin_right = 147.0
margin_bottom = 117.0
rect_min_size = Vector2( 100, 100 )
text = "shake up!"

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 121.0
margin_right = 147.0
margin_bottom = 221.0
rect_min_size = Vector2( 100, 100 )
text = "shake down!"

[node name="CenterPoint" type="Sprite" parent="."]
modulate = Color( 1, 0.203922, 0.203922, 1 )
position = Vector2( 341, 656 )
scale = Vector2( 0.1875, 0.203125 )
texture = ExtResource( 2 )

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
